# opengl_start_template

./: CMakeLists.txt  README.md  main.cpp
